숙제와 관리자 페이지변경

--- a/html/03_admin_side/css/style.css
+++ b/html/03_admin_side/css/style.css
@@ -59,8 +59,11 @@ margin: 0;
 	float: left;
 	margin: 10px 5px;
 }	
-#btn{
-	font-size:30px;
+.btn{
+	font-size:15px;
 	width:30px;
 	height: 30px;
+	text-align: center;
+	box-sizing: border-box;
+	padding: 0 1px 1px 0;
 }
