--- a/html/03_admin_side/css/style.css
+++ b/html/03_admin_side/css/style.css
@@ -86,7 +86,7 @@ margin: 0;
 	float:right;
 }
 #navTable{
-	margin:0 40%;
+	margin:0 47%;
 	float: left;
 }
 #iconBox1{
@@ -103,6 +103,14 @@ margin: 0;
 .link{
 	padding-top: 2px;
 }
+/* 모달창 */
+.bgModal {width: 100%; height: 100%; background-color: rgba(0,0,0,.7); position: fixed; left: 0; top: 0; z-index: 9998; display: none;
+}
+.modal {
+	z-index: 9999;
+}
+
+
 /*서브페이지*/
 #mainContentSub{
 	width : 75%;
@@ -113,10 +121,11 @@ margin: 0;
 	display: flex;
 	width: 70%;
 	}
-	.bundle01_item{
+.bundle01_item{
 		margin-right: 10px;
-	}
-
-
+}
+.pointColor{
+	color:red;
+}
 
 
